updated another test set of documents that I need to finish and develop

--- a/_posts/core/2014-04-4-pro-git.markdown
+++ b/_posts/core/2014-04-4-pro-git.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "Rolling Back with Git"
 date:   2014-03-10 14:26:51
 video: http://www.youtube.com/embed/U8GBXvdmHT4
-category: "core basics"
+category: "core-basics"
 tags: [Git] 
 comments: true
 ---
